# python-apmecclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  HACKING.rst  README.md  README.rst  lower-constraints.txt  setup.cfg  test-requirements.txt  tox.ini
apmecclient/: client.py  i18n.py  shell.py  version.py
apmecclient/apmec/: client.py
apmecclient/apmec/v1_0/: __init__.py  extension.py
apmecclient/apmec/v1_0/events/: events.py
apmecclient/apmec/v1_0/mem/: mea.py  mead.py
apmecclient/apmec/v1_0/meo/: meca.py  mecad.py  mes.py  mesd.py  vim.py  vim_utils.py
apmecclient/apmec/v1_0/meso/: mes.py  mesd.py
apmecclient/common/: _i18n.py  clientmanager.py  constants.py  exceptions.py  extension.py  serializer.py  utils.py  validators.py
apmecclient/tests/unit/: test_auth.py  test_casual_args.py  test_cli10.py  test_cli10_extensions.py  test_command_meta.py  test_http.py  test_shell.py  test_ssl.py  test_utils.py  test_validators.py
apmecclient/tests/unit/vm/: test_cli10_mea.py  test_cli10_mead.py  test_cli10_v10_event.py  test_cli10_vim.py  test_vim_utils.py
apmecclient/v1_0/: client.py
doc/source/: conf.py  index.rst
tools/: apmec.bash_completion
